--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
 		<img src="https://i.natgeofe.com/k/66d3a80c-f4c3-4410-845c-3543375eaa85/cheetah-watching_square.jpg" alt="animal" width="150px" height="100px">
 		<img src="https://www.wwf.org.uk/sites/default/files/styles/social_share_image/public/2018-10/Large_WW1113482.jpg?itok=Bluh496C" alt="animal" width="150px" height="100px">
 		<img src="https://files.worldwildlife.org/wwfcmsprod/images/Mountain_Gorilla_Silverback_WW22557/story_full_width/36fcoamev0_Mountain_Gorilla_Silverback_WW22557.jpg" alt="animal" width="150px" height="100px">
-		<img src="https://cdn.britannica.com/26/162626-050-3534626F/Koala.jpg" alt="animal" width="150px" height="100px">
+		<img src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2014_FallP8/Rami_Portfolio_Period8/unit4_css/project_1folder/cssProject1/camel.jpg" alt="animal" width="150px" height="100px">
 		<img src="https://images.pexels.com/photos/6180778/pexels-photo-6180778.jpeg?cs=srgb&dl=pexels-bisakha-datta-6180778.jpg&fm=jpg" alt="animal" width="150px" height="100px">
 		<img src="https://d.newsweek.com/en/full/2227187/polar-bear-cubs.jpg" alt="animal" width="150px" height="100px">
 		<img src="https://optimise2.assets-servd.host/maniacal-finch/production/animals/amur-tiger-01-01.jpg?w=1200&auto=compress%2Cformat&fit=crop&dm=1658935145&s=1b96c26544a1ee414f976c17b18f2811" alt="animal" width="150px" height="100px">
