--- a/main.html
+++ b/main.html
@@ -10,11 +10,11 @@
 	<!-- the entire body must be written by student -->
 	<div class="container" id="animal-photos">
 		<h1 id="photo-heading" >Animal Photos</h1>
-		<img src="https://cdn.britannica.com/94/152294-050-92FE0C83/Arabian-dromedary-camel.jpg" alt="animal" width="150px" height="100px">
+        <img src="https://fohn.net/camel-pictures-facts/the-pictures/Arabian-Camel-800x600.jpg" alt="camel" width=150 height=100>
 		<img src="https://i.natgeofe.com/k/66d3a80c-f4c3-4410-845c-3543375eaa85/cheetah-watching_square.jpg" alt="animal" width="150px" height="100px">
 		<img src="https://www.wwf.org.uk/sites/default/files/styles/social_share_image/public/2018-10/Large_WW1113482.jpg?itok=Bluh496C" alt="animal" width="150px" height="100px">
 		<img src="https://files.worldwildlife.org/wwfcmsprod/images/Mountain_Gorilla_Silverback_WW22557/story_full_width/36fcoamev0_Mountain_Gorilla_Silverback_WW22557.jpg" alt="animal" width="150px" height="100px">
-         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/49/Koala_climbing_tree.jpg/800px-Koala_climbing_tree.jpg" alt="koala" width=150 height=100>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/49/Koala_climbing_tree.jpg/800px-Koala_climbing_tree.jpg" alt="koala" width=150 height=100>
 		<img src="https://images.pexels.com/photos/6180778/pexels-photo-6180778.jpeg?cs=srgb&dl=pexels-bisakha-datta-6180778.jpg&fm=jpg" alt="animal" width="150px" height="100px">
 		<img src="https://d.newsweek.com/en/full/2227187/polar-bear-cubs.jpg" alt="animal" width="150px" height="100px">
 		<img src="https://optimise2.assets-servd.host/maniacal-finch/production/animals/amur-tiger-01-01.jpg?w=1200&auto=compress%2Cformat&fit=crop&dm=1658935145&s=1b96c26544a1ee414f976c17b18f2811" alt="animal" width="150px" height="100px">
