--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
 	<div class="container" id="animal-photos">
 		<h1 id="photo-heading" >Animal Photos</h1>
-        <img src="https://fohn.net/camel-pictures-facts/the-pictures/Arabian-Camel-800x600.jpg" alt="camel" width=150 height=100>
+        <img src="https://images.pexels.com/photos/3889895/pexels-photo-3889895.jpeg?cs=srgb&dl=pexels-taryn-elliott-3889895.jpg&fm=jpg" alt="camel" width=150 height=100>
 		<img src="https://i.natgeofe.com/k/66d3a80c-f4c3-4410-845c-3543375eaa85/cheetah-watching_square.jpg" alt="animal" width="150px" height="100px">
 		<img src="https://www.wwf.org.uk/sites/default/files/styles/social_share_image/public/2018-10/Large_WW1113482.jpg?itok=Bluh496C" alt="animal" width="150px" height="100px">
 		<img src="https://files.worldwildlife.org/wwfcmsprod/images/Mountain_Gorilla_Silverback_WW22557/story_full_width/36fcoamev0_Mountain_Gorilla_Silverback_WW22557.jpg" alt="animal" width="150px" height="100px">
